Actualización de Archivo

--- a/Solicitud-propuesta.html
+++ b/Solicitud-propuesta.html
@@ -1,16 +1,25 @@
-Hola, [nombre]:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<p>Hola, [nombre]:
 
-Le agradecemos el interés mostrado por [nombre de la agencia]. Hemos trabajado con muchas empresas que experimentaban dificultades con [desafío clave]. Si desea leer los casos de éxito de nuestras relaciones comerciales anteriores, puede consultarlas en [enlace] y [enlace].
+Le agradecemos el interés mostrado por [nombre de la agencia]. Hemos trabajado con muchas empresas que experimentaban dificultades con [desafío clave]. Si desea leer los casos de éxito de nuestras relaciones comerciales anteriores, puede consultarlas en [enlace] y [enlace].<br><br>
 
-En esta etapa del proceso no creamos propuestas, ya que somos una agencia que se centra en los resultados, así que necesitamos conocer mejor su empresa, sus desafíos y necesidades para poder determinar si podremos ayudarle y cómo lo lograremos. Como tenemos este enfoque, solo podemos atender a cierto número de cuentas nuevas al año: los clientes que están seguros de que podremos generarles buenos resultados.  
+En esta etapa del proceso no creamos propuestas, ya que somos una agencia que se centra en los resultados, así que necesitamos conocer mejor su empresa, sus desafíos y necesidades para poder determinar si podremos ayudarle y cómo lo lograremos. Como tenemos este enfoque, solo podemos atender a cierto número de cuentas nuevas al año: los clientes que están seguros de que podremos generarles buenos resultados. <br> <br>
 
-Me encantaría programar una llamada o reunión en persona para conocer más información sobre sus objetivos de marketing y ventas para el año, actividades actuales de marketing y de qué forma nuestra agencia podría trabajar para mejorar los resultados de [nombre de la empresa].
+Me encantaría programar una llamada o reunión en persona para conocer más información sobre sus objetivos de marketing y ventas para el año, actividades actuales de marketing y de qué forma nuestra agencia podría trabajar para mejorar los resultados de [nombre de la empresa].<br><br>
 
-A continuación le muestro algunas fechas y horarios disponibles:
+A continuación le muestro algunas fechas y horarios disponibles:<br><br>
 
-[Fecha y hora]
-[Fecha y hora]
-[Fecha y hora]
-Espero poder conversar con usted pronto.
+[Fecha y hora]<br>
+[Fecha y hora]<br>
+[Fecha y hora]<br><br>
+Espero poder conversar con usted pronto.<br><br>
 
-Saludos,
+Saludos,</p>
+</body>
+</html>
