--- a/Solicitar-aprobacion-proyecto.html
+++ b/Solicitar-aprobacion-proyecto.html
@@ -1,28 +1,44 @@
-Hola, [nombre]:
 
-¡Espero que esté listo!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+<p>Hola, [nombre]:</p><br><br>
 
-El equipo acaba de terminar los diseños de comparación para el rediseño de su página de inicio y tengo muchas ganas de mostrárselos. Creo que, si bien las dos versiones son muy diferentes, ambas resuelven el problema que tienen sus visitas para entender la facilidad de implementar su solución.
+<p>¡Espero que esté listo!</p><br><br>
 
-Pero primero queremos abordar algunos aspectos del informe creativo que se aprobó para establecer el proceso:
+<p>El equipo acaba de terminar los diseños de comparación para el rediseño de su página de inicio y tengo muchas ganas de mostrárselos. Creo que, si bien las dos versiones son muy diferentes, ambas resuelven el problema que tienen sus visitas para entender la facilidad de implementar su solución.</p><br><br>
 
-[Audiencia objetivo]
-[El problema que debería resolver el diseño]
-[Las acciones que deberían tomar las visitas]
-[La emoción/sentimiento que las personas deberían tener al visitar el sitio web]
-A continuación le envío las réplicas de diseño acompañadas con una descripción sobre por qué se tomaron ciertas decisiones.
+<p>Pero primero queremos abordar algunos aspectos del informe creativo que se aprobó para establecer el proceso:</p><br><br>
 
-Versión 1 [enlace]
-Versión 2 [enlace]
-Después de analizarlas, díganos si tiene comentarios sobre cada uno de los siguientes aspectos de los diseños:
+<p>[Audiencia objetivo]
+<p>[El problema que debería resolver el diseño]
+<p>[Las acciones que deberían tomar las visitas]
+<p>[La emoción/sentimiento que las personas deberían tener al visitar el sitio web]
+<p>A continuación le envío las réplicas de diseño acompañadas con una descripción sobre por qué se tomaron ciertas decisiones.
 
-¿Qué destaca más?
-¿Cuál cree que cautivará más a su audiencia objetivo?
-¿El mensaje está alineado con las necesidades y los desafíos de sus visitas?
-¿La llamada a la acción es cautivadora y clara? ¿Podríamos hacer algo para mejorarla?
-¿Cuál cree que tendría un mejor desempeño con sus visitas objetivo?
-Como mencionamos en nuestra última reunión, pensamos que sería útil realizar una prueba de mapa de calor en estas dos versiones para determinar cuál tiene una tasa de conversión mayor. En este [enlace] está la descripción del proyecto y el precio de la prueba.
+<p>Versión 1 [enlace]</p><br><br>
+<p>Versión 2 [enlace]</p><br><br>
+<p>Después de analizarlas, díganos si tiene comentarios sobre cada uno de los siguientes aspectos de los diseños:</p><br><br>
+<<ul>
+	<li>¿Qué destaca más?</li>
+	<li>¿Cuál cree que cautivará más a su audiencia objetivo?</li>
+	<li>¿El mensaje está alineado con las necesidades y los desafíos de sus visitas?</li>
+	<li>¿La llamada a la acción es cautivadora y clara? ¿Podríamos hacer algo para mejorarla?</li>
+	<li>¿Cuál cree que tendría un mejor desempeño con sus visitas objetivo?</li>
 
-Si desea que charlemos por teléfono para abordar este asunto, haga clic aquí [enlace al calendario de reservaciones online] para programar una cita en mi calendario.
 
-Gracias,
+
+
+</ul><br><br>
+
+<p>Como mencionamos en nuestra última reunión, pensamos que sería útil realizar una prueba de mapa de calor en estas dos versiones para determinar cuál tiene una tasa de conversión mayor. En este [enlace] está la descripción del proyecto y el precio de la prueba.</p><br><br>
+
+<p>Si desea que charlemos por teléfono para abordar este asunto, haga clic aquí [enlace al calendario de reservaciones online] para programar una cita en mi calendario.</p><br><br>
+
+<p>Gracias,</p><br><br>	
+</body>
+</html>
